At #437 Modify Device Deletion to Handle Array of IDs
